--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 		<div class="wrapper">
 			<div class="imageBlock">
 				<div class="imageContentHolder">
-					<img src = "769038ee71f9a999a4b2f10f5a5d653a.jpg" class="imageContent"/>
+					<img src = "./769038ee71f9a999a4b2f10f5a5d653a.jpg" class="imageContent"/>
 				</div>
 				<div class="labelImage">
 					<p align="center"><a class="labelImageContent"href="vyshyvka.html">Вишивка</a></p>
